<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".FragmentsAdmin.RegistroAdmin">



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bocailocarga"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeprint2"
            android:gravity="center"
            android:text="@string/RegistroTxt"
            android:textColor="@color/naranjaBocailo"
            android:textSize="18sp"
            android:textStyle="bold" />


        <!--CORREO ELECTRONICO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Correo"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress"
                android:background="@drawable/bordesredondeados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASEÑA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:background="@drawable/bordesredondeados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--NOMBRE-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Nombre"
                android:hint="@string/Nombre"
                android:inputType="textCapWords|textAutoCorrect"
                android:background="@drawable/bordesredondeados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--APELLIDOS-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Apellidos"
                android:hint="@string/Apellidos"
                android:inputType="textCapWords|textAutoCorrect"
                android:background="@drawable/bordesredondeados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--DNI-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Dni"
                android:hint="@string/Dni"
                android:inputType="textAutoCorrect|text"
                android:background="@drawable/bordesredondeados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--BOTON REGISTRO-->
        <Button
            android:id="@+id/Registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/Registrar"
            android:textColor="@color/black"
            android:fontFamily="@font/segoeprint2"
            android:background="@drawable/bordesredondeados"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>




</ScrollView>